--- a/S4600_Advanced_Python.ipynb
+++ b/S4600_Advanced_Python.ipynb
@@ -93,10 +93,9 @@
    "cell_type": "code",
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2024-08-21T08:57:15.950078Z",
-     "start_time": "2024-08-21T08:57:15.945143Z"
+     "end_time": "2024-10-24T11:29:04.428318800Z",
+     "start_time": "2024-10-24T11:29:04.411889Z"
     }
    },
    "source": [
@@ -108,21 +107,22 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[0, 1, 2, 3, 4, 5, 36, 49, 64, 81]"
-      ]
+      "text/plain": "[0, 1, 2, 3, 4, 5, 36, 49, 64, 81]"
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 5
   },
   {
    "cell_type": "code",
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-10-24T11:36:46.850672200Z",
+     "start_time": "2024-10-24T11:36:46.781822200Z"
+    }
    },
    "source": [
     "# Eksempel:\n",
@@ -130,17 +130,25 @@
     "list_comprehension_with_2_if = [i * i if i > 5 else i for i in range(10) if i%2 == 0]\n",
     "list_comprehension_with_2_if"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[0, 2, 4, 36, 64]"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 9
   },
   {
    "cell_type": "code",
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2024-08-21T09:03:03.743403Z",
-     "start_time": "2024-08-21T09:03:03.737597Z"
+     "end_time": "2024-10-24T11:46:05.957140200Z",
+     "start_time": "2024-10-24T11:46:05.894553500Z"
     }
    },
    "source": [
@@ -154,16 +162,14 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45]"
-      ]
+      "text/plain": "[0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45]"
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
