Advanced Python læsning/video samt opgaver

--- a/S4600_Advanced_Python.ipynb
+++ b/S4600_Advanced_Python.ipynb
@@ -147,8 +147,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-24T11:46:05.957140200Z",
-     "start_time": "2024-10-24T11:46:05.894553500Z"
+     "end_time": "2024-10-25T09:33:48.306300300Z",
+     "start_time": "2024-10-25T09:33:48.283102200Z"
     }
    },
    "source": [
@@ -156,20 +156,21 @@
     "# Ændr den følgende kode. Brug en inline if.\n",
     "# Programmets output skal være: [0, 3, 6, 9, 4, 15, 18, 21, 8, 27, 30, 33, 12, 39, 42, 45]\n",
     "\n",
-    "example_list = [i * 3 for i in range(16)]\n",
+    "# example_list = [i * 3 for i in range(16)]\n",
+    "example_list = [i * 3 if i > 5 else i for i in range(16) if i%3 == 0]\n",
     "example_list"
    ],
    "outputs": [
     {
      "data": {
-      "text/plain": "[0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45]"
+      "text/plain": "[0, 3, 18, 27, 36, 45]"
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 19
   },
   {
    "cell_type": "markdown",
