--- a/S4600_Advanced_Python.ipynb
+++ b/S4600_Advanced_Python.ipynb
@@ -156,7 +156,7 @@
     "# Ændr den følgende kode. Brug en inline if.\n",
     "# Programmets output skal være: [0, 3, 6, 9, 4, 15, 18, 21, 8, 27, 30, 33, 12, 39, 42, 45]\n",
     "\n",
-    "example_list = [i * 3 if i % 4 != 0 else i for i in range(16)]\n",
+    "example_list = [i * 3 if i%4 != 0 else i for i in range(16)]\n",
     "example_list\n"
    ],
    "outputs": [
@@ -202,7 +202,10 @@
   {
    "cell_type": "code",
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-10-28T12:29:23.348965200Z",
+     "start_time": "2024-10-28T12:29:23.315981200Z"
+    }
    },
    "source": [
     "# Eksempel:\n",
@@ -216,14 +219,28 @@
     "print(f'{set_comprehension = }')\n",
     "print(f'{generator_comprehension = }')"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dictionary_comprehension = {0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81}\n",
+      "list_comprehension = [0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n",
+      "set_comprehension = {0, 1, 2}\n",
+      "generator_comprehension = <generator object <genexpr> at 0x0000017055534040>\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-10-28T13:34:27.661751500Z",
+     "start_time": "2024-10-28T13:34:27.620371600Z"
+    }
    },
    "source": [
     "# Eksempel:\n",
@@ -233,22 +250,60 @@
     "list_comprehension_2 = [i * i if i > 7 else i + 1000 for i in range(13) if i > 5]  # the first if statement (ternary if) controls what is added to the list (provided the second if statement is true)\n",
     "print(f'{list_comprehension_2 = }')"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list_comprehension_1 = [36, 49, 64, 81, 100, 121, 144]\n",
+      "list_comprehension_2 = [1006, 1007, 64, 81, 100, 121, 144]\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-10-28T13:54:26.414490400Z",
+     "start_time": "2024-10-28T13:54:26.373775300Z"
+    }
    },
    "source": [
     "# Opgave:\n",
     "# Skab denne liste med comprehension: [10, 15, 20, 25, 30, 35]\n",
-    "# Skriv din kode her"
+    "# Skriv din kode her\n",
+    "for n in range(6):\n",
+    "    print(n*5)\n",
+    "    \n",
+    "list_comprehension = [i * 5 for i in range(8) if i > 1]\n",
+    "list_comprehension"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "5\n",
+      "10\n",
+      "15\n",
+      "20\n",
+      "25\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "[10, 15, 20, 25, 30, 35]"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 11
   },
   {
    "cell_type": "code",
