Advanced Python læsning/video samt opgaver

--- a/S4600_Advanced_Python.ipynb
+++ b/S4600_Advanced_Python.ipynb
@@ -309,16 +309,52 @@
    "cell_type": "code",
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-10-31T10:52:00.948239900Z",
+     "start_time": "2024-10-31T10:52:00.904632300Z"
+    }
    },
    "source": [
     "# Opgave:\n",
     "# Skab denne liste med comprehension: [0, 1, 2, 3, 40, 41, 42, 43, 44, 45]\n",
     "# Brug \"if\" i din løsning!\n",
-    "# Skriv din kode her"
+    "# Skriv din kode her\n",
+    "\n",
+    "list_comprehension = [i if i < 4 else i + 36 for i in range(10)]\n",
+    "list_comprehension \n",
+    "\n",
+    "# Uelegant løsning uden ternary inline:\n",
+    "# liste = []\n",
+    "# for i in range(11):\n",
+    "#     if i%4 != 0 or i == 0:\n",
+    "#         if i < 5:\n",
+    "#             liste.append(1 * i)\n",
+    "#         else:\n",
+    "#             liste.append(35 + i)\n",
+    "#             \n",
+    "# liste\n",
+    "\n",
+    "#  Opgave løst med traditionelt if-statement:\n",
+    "# liste2 = []\n",
+    "# for i in range(10):\n",
+    "#     if i < 4:\n",
+    "#         liste2.append(i)\n",
+    "#     else:\n",
+    "#         liste2.append(36 + i)\n",
+    "#             \n",
+    "# liste2"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[0, 1, 2, 3, 40, 41, 42, 43, 44, 45]"
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 26
   },
   {
    "cell_type": "code",
@@ -329,7 +365,10 @@
    "source": [
     "# Opgave:\n",
     "# Skab denne dictionary med comprehension: {3: 33, 4: 44, 5: 55, 6: 66}\n",
-    "# Skriv din kode her"
+    "# Skriv din kode her\n",
+    "\n",
+    "dict_comprehension = {}\n",
+    "dict_comprehension"
    ],
    "outputs": [],
    "execution_count": null
