Advanced Python læsning/video samt opgaver

--- a/S4600_Advanced_Python.ipynb
+++ b/S4600_Advanced_Python.ipynb
@@ -360,18 +360,30 @@
    "cell_type": "code",
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-10-31T10:57:06.610065500Z",
+     "start_time": "2024-10-31T10:57:06.579044Z"
+    }
    },
    "source": [
     "# Opgave:\n",
     "# Skab denne dictionary med comprehension: {3: 33, 4: 44, 5: 55, 6: 66}\n",
     "# Skriv din kode her\n",
     "\n",
-    "dict_comprehension = {}\n",
+    "dict_comprehension = {i: 11 * i for i in range(3) if i > 2}\n",
     "dict_comprehension"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{}"
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 30
   },
   {
    "cell_type": "markdown",
