Advanced Python læsning/video samt opgaver

--- a/S4600_Advanced_Python.ipynb
+++ b/S4600_Advanced_Python.ipynb
@@ -331,10 +331,10 @@
     "#             liste.append(1 * i)\n",
     "#         else:\n",
     "#             liste.append(35 + i)\n",
-    "#             \n",
+    "# \n",
     "# liste\n",
     "\n",
-    "#  Opgave løst med traditionelt if-statement:\n",
+    "# Opgave løst med traditionelt if-statement:\n",
     "# liste2 = []\n",
     "# for i in range(10):\n",
     "#     if i < 4:\n",
@@ -361,8 +361,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-31T10:57:06.610065500Z",
-     "start_time": "2024-10-31T10:57:06.579044Z"
+     "end_time": "2024-10-31T13:42:43.520190600Z",
+     "start_time": "2024-10-31T13:42:43.494630700Z"
     }
    },
    "source": [
@@ -370,20 +370,22 @@
     "# Skab denne dictionary med comprehension: {3: 33, 4: 44, 5: 55, 6: 66}\n",
     "# Skriv din kode her\n",
     "\n",
-    "dict_comprehension = {i: 11 * i for i in range(3) if i > 2}\n",
-    "dict_comprehension"
+    "dictionary_comprehension = {i: 11 * i for i in range(7) if i > 2}\n",
+    "# dictionary_comprehension = {i: 11 * i for i in range(7) if i < 7 and i > 2}\n",
+    "#dictionary_comprehension = {i: i * i for i in range(10)}\n",
+    "dictionary_comprehension"
    ],
    "outputs": [
     {
      "data": {
-      "text/plain": "{}"
+      "text/plain": "{3: 33, 4: 44, 5: 55, 6: 66}"
      },
-     "execution_count": 30,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 30
+   "execution_count": 55
   },
   {
    "cell_type": "markdown",
