Advanced Python læsning/video samt opgaver

--- a/S4600_Advanced_Python.ipynb
+++ b/S4600_Advanced_Python.ipynb
@@ -414,25 +414,40 @@
    "cell_type": "code",
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-11-19T09:54:11.968141Z",
+     "start_time": "2024-11-19T09:54:11.920394500Z"
+    }
    },
    "source": [
     "# Opgave:\n",
     "# Tilføj en magisk funktion til klassen Dog så \"huge_dog > tiny_dog\" interpreteres på en fornuftig måde.\n",
     "\n",
     "class Dog:\n",
+    "    \n",
     "    def __init__(self, size):\n",
     "        self.size = size\n",
+    "        \n",
+    "    def __gt__(self, other):\n",
+    "        return self.size > other.size\n",
     "        \n",
     "huge_dog = Dog(80)\n",
     "tiny_dog = Dog(25)\n",
     "\n",
     "# Uncomment this in order to test your solution!\n",
-    "# if huge_dog > tiny_dog:\n",
-    "#     print(\"You solved the exercise :)\")"
+    "if huge_dog > tiny_dog:\n",
+    "    print(\"You solved the exercise :)\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You solved the exercise :)\n"
+     ]
+    }
+   ],
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -457,23 +472,40 @@
   {
    "cell_type": "code",
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-11-19T10:02:26.760184300Z",
+     "start_time": "2024-11-19T10:02:26.728531100Z"
+    }
    },
    "source": [
     "# Eksempel:\n",
     "# Kør programmet og leg med koden\n",
-    "a, *b, c, d, e = (1, 2, 3, 4, 5, 6, 7, 8)  # *-Operator for unpacking (works for tuples and lists)\n",
+    "a, b, *c, d, e = (1, 2, 3, 4, 5, 6, 7, 8)  # *-Operator for unpacking (works for tuples and lists)\n",
     "print(f'{a=} {b=} {c=} {d=} {e=}')\n",
-    "print(type(b))"
+    "print(type(c))\n",
+    "print(type(a))"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a=1 b=2 c=[3, 4, 5, 6] d=7 e=8\n",
+      "<class 'list'>\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "execution_count": 13
   },
   {
    "cell_type": "code",
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-11-19T10:05:51.414374Z",
+     "start_time": "2024-11-19T10:05:51.331147100Z"
+    }
    },
    "source": [
     "# Opgave:\n",
@@ -484,8 +516,17 @@
     "result = some_function()  # change this line\n",
     "result"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(1, 2, 3, 4, 5, 6, 7, 8)"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 14
   },
   {
    "cell_type": "markdown",
