Advanced Python læsning/video samt opgaver

--- a/S4600_Advanced_Python.ipynb
+++ b/S4600_Advanced_Python.ipynb
@@ -503,8 +503,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-19T10:05:51.414374Z",
-     "start_time": "2024-11-19T10:05:51.331147100Z"
+     "end_time": "2024-11-20T10:12:44.575542900Z",
+     "start_time": "2024-11-20T10:12:44.541001Z"
     }
    },
    "source": [
@@ -513,20 +513,20 @@
     "def some_function():\n",
     "    return 1, 2, 3, 4, 5, 6, 7, 8\n",
     "\n",
-    "result = some_function()  # change this line\n",
+    "_, _, _, *result, _, _ = some_function() \n",
     "result"
    ],
    "outputs": [
     {
      "data": {
-      "text/plain": "(1, 2, 3, 4, 5, 6, 7, 8)"
+      "text/plain": "[4, 5, 6]"
      },
-     "execution_count": 14,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -549,7 +549,10 @@
   {
    "cell_type": "code",
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-11-20T10:12:59.694699400Z",
+     "start_time": "2024-11-20T10:12:59.650653600Z"
+    }
    },
    "source": [
     "# Eksempel:\n",
@@ -567,8 +570,23 @@
     "for t in a_tuple:\n",
     "    print(\"Tuple\", t)"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a_string='abc'     type(a_string)=<class 'str'>\n",
+      "a_tuple=('abc',)     type(a_tuple)=<class 'tuple'>\n",
+      "also_a_string='abc'     type(also_a_string)=<class 'str'>\n",
+      "\n",
+      "String a\n",
+      "String b\n",
+      "String c\n",
+      "Tuple abc\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
