Advanced Python læsning/video samt opgaver

--- a/S4600_Advanced_Python.ipynb
+++ b/S4600_Advanced_Python.ipynb
@@ -550,8 +550,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-20T10:12:59.694699400Z",
-     "start_time": "2024-11-20T10:12:59.650653600Z"
+     "end_time": "2024-11-20T10:38:25.765537400Z",
+     "start_time": "2024-11-20T10:38:25.683384500Z"
     }
    },
    "source": [
@@ -559,7 +559,7 @@
     "# Kør programmet og leg med koden\n",
     "a_string = \"abc\"   # string\n",
     "print(f\"{a_string=}     {type(a_string)=}\")\n",
-    "a_tuple = (\"abc\",)   # tuple  (kommaet er afgørende!)\n",
+    "a_tuple = (\"abc\", \"def\",)   # tuple  (kommaet er afgørende!)\n",
     "print(f\"{a_tuple=}     {type(a_tuple)=}\")\n",
     "also_a_string = (\"abc\")   # tuple  (kommaet er afgørende!)\n",
     "print(f\"{also_a_string=}     {type(also_a_string)=}\")\n",
@@ -576,17 +576,18 @@
      "output_type": "stream",
      "text": [
       "a_string='abc'     type(a_string)=<class 'str'>\n",
-      "a_tuple=('abc',)     type(a_tuple)=<class 'tuple'>\n",
+      "a_tuple=('abc', 'def')     type(a_tuple)=<class 'tuple'>\n",
       "also_a_string='abc'     type(also_a_string)=<class 'str'>\n",
       "\n",
       "String a\n",
       "String b\n",
       "String c\n",
-      "Tuple abc\n"
+      "Tuple abc\n",
+      "Tuple def\n"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 7
   },
   {
    "cell_type": "code",
