--- a/S4600_Advanced_Python.ipynb
+++ b/S4600_Advanced_Python.ipynb
@@ -622,7 +622,12 @@
    ]
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-21T08:34:03.807866900Z",
+     "start_time": "2024-11-21T08:34:03.795993300Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# Eksempel:\n",
@@ -634,8 +639,22 @@
     "for i, j in some_tuples:\n",
     "    print(f\"Two iterators, {i=}, {j=}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "One iterator, t=('a', 13)\n",
+      "One iterator, t=('b', 29)\n",
+      "One iterator, t=('c', 36)\n",
+      "\n",
+      "Two iterators, i='a', j=13\n",
+      "Two iterators, i='b', j=29\n",
+      "Two iterators, i='c', j=36\n"
+     ]
+    }
+   ],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
@@ -675,16 +694,33 @@
    "cell_type": "code",
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-11-21T08:45:26.352291600Z",
+     "start_time": "2024-11-21T08:45:26.288322600Z"
+    }
    },
    "source": [
     "# Opgave:\n",
     "# Tilføj en for løkke med 2 iteratorer, som udprinter \"a 10   b 12   c 23   d 41\"\n",
     "letters = [\"a\", \"b\", \"c\", \"d\"]\n",
-    "numbers = [10, 12, 23, 41, 56, 58]\n"
+    "numbers = [10, 12, 23, 41, 56, 58]\n",
+    "zipped = zip(letters, numbers)\n",
+    "for i, j in zipped:\n",
+    "    print(i, j)"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a 10\n",
+      "b 12\n",
+      "c 23\n",
+      "d 41\n"
+     ]
+    }
+   ],
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
