Advanced Python læsning/video samt opgaver

--- a/S4600_Advanced_Python.ipynb
+++ b/S4600_Advanced_Python.ipynb
@@ -679,7 +679,10 @@
   {
    "cell_type": "code",
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-11-21T08:46:22.008207500Z",
+     "start_time": "2024-11-21T08:46:21.974393900Z"
+    }
    },
    "source": [
     "# Eksempel:\n",
@@ -687,16 +690,24 @@
     "for i, j, k in zip(range(4,23), \"abc\", [\"One\", \"Two\", \"Three\", \"Four\"]):\n",
     "    print(i, j, k, end=\"           \")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 a One           5 b Two           6 c Three           "
+     ]
+    }
+   ],
+   "execution_count": 12
   },
   {
    "cell_type": "code",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T08:45:26.352291600Z",
-     "start_time": "2024-11-21T08:45:26.288322600Z"
+     "end_time": "2024-11-21T08:46:49.164198800Z",
+     "start_time": "2024-11-21T08:46:49.113429300Z"
     }
    },
    "source": [
@@ -706,21 +717,18 @@
     "numbers = [10, 12, 23, 41, 56, 58]\n",
     "zipped = zip(letters, numbers)\n",
     "for i, j in zipped:\n",
-    "    print(i, j)"
+    "    print(i, j, end=\"   \")"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a 10\n",
-      "b 12\n",
-      "c 23\n",
-      "d 41\n"
+      "a 10   b 12   c 23   d 41   "
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
