--- a/S4600_Advanced_Python.ipynb
+++ b/S4600_Advanced_Python.ipynb
@@ -758,7 +758,10 @@
   {
    "cell_type": "code",
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-11-21T08:56:53.166460800Z",
+     "start_time": "2024-11-21T08:56:53.108913Z"
+    }
    },
    "source": [
     "# Eksempel:\n",
@@ -779,8 +782,17 @@
     "dummies.sort(key=lambda x: x.a, reverse=False)\n",
     "print(\"after \", dummies)"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before [self.a=999 self.b=3, self.a=777 self.b=5]\n",
+      "after  [self.a=777 self.b=5, self.a=999 self.b=3]\n"
+     ]
+    }
+   ],
+   "execution_count": 16
   },
   {
    "cell_type": "code",
@@ -791,7 +803,8 @@
    "source": [
     "# Opgave:\n",
     "# Forklar hvad der sker i den følgende kodelinje.\n",
-    "(lambda x: x * 3)(5)"
+    "(lambda x: x * 3)(5)\n",
+    "# værdien 5 bliver givet som input i funktionen og resultatet vil være 15. 5 Sættes ind på x'es plads."
    ],
    "outputs": [],
    "execution_count": null
