--- a/S4600_Advanced_Python.ipynb
+++ b/S4600_Advanced_Python.ipynb
@@ -804,7 +804,7 @@
     "# Opgave:\n",
     "# Forklar hvad der sker i den følgende kodelinje.\n",
     "(lambda x: x * 3)(5)\n",
-    "# værdien 5 bliver givet som input i funktionen og resultatet vil være 15. 5 Sættes ind på x'es plads."
+    "# værdien 5 bliver givet som input i funktionen og resultatet vil være 15. 5 Sættes ind på x'es plads (x er argumentet i denne lambda funktion). Funktonen er anonym (intet navn defineret)"
    ],
    "outputs": [],
    "execution_count": null
