Advanced Python læsning/video samt opgaver

--- a/S4600_Advanced_Python.ipynb
+++ b/S4600_Advanced_Python.ipynb
@@ -660,7 +660,10 @@
    "cell_type": "code",
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-11-22T08:29:54.079902800Z",
+     "start_time": "2024-11-22T08:29:53.978365400Z"
+    }
    },
    "source": [
     "# Eksempel:\n",
@@ -673,8 +676,20 @@
     "for item in zipped:\n",
     "    print(f\"{item=}   {type(item)=}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zipped=<zip object at 0x000002165593BD40>\n",
+      "type(zipped)=<class 'zip'>\n",
+      "item=('Klaus', 18)   type(item)=<class 'tuple'>\n",
+      "item=('Dorte', 20)   type(item)=<class 'tuple'>\n",
+      "item=('Hans', 15)   type(item)=<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
