--- a/S4600_Advanced_Python.ipynb
+++ b/S4600_Advanced_Python.ipynb
@@ -774,8 +774,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-21T08:56:53.166460800Z",
-     "start_time": "2024-11-21T08:56:53.108913Z"
+     "end_time": "2024-11-22T10:59:59.697632500Z",
+     "start_time": "2024-11-22T10:59:59.644027200Z"
     }
    },
    "source": [
@@ -792,22 +792,26 @@
     "        \n",
     "dummy1 = Dummy(999, 3)\n",
     "dummy2 = Dummy(777, 5)\n",
-    "dummies = [dummy1, dummy2]\n",
-    "print(\"before\", dummies)\n",
+    "dmy3 = Dummy(222, 1)\n",
+    "dummies = [dummy1, dummy2, dmy3]\n",
+    "print(\"before sorting:\", dummies)\n",
     "dummies.sort(key=lambda x: x.a, reverse=False)\n",
-    "print(\"after \", dummies)"
+    "print(\"after sorting a:\", dummies)\n",
+    "dummies.sort(key=lambda x: x.b, reverse=False)\n",
+    "print(\"after sorting b:\", dummies)"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "before [self.a=999 self.b=3, self.a=777 self.b=5]\n",
-      "after  [self.a=777 self.b=5, self.a=999 self.b=3]\n"
+      "before sorting [self.a=999 self.b=3, self.a=777 self.b=5, self.a=222 self.b=1]\n",
+      "after sorting a [self.a=222 self.b=1, self.a=777 self.b=5, self.a=999 self.b=3]\n",
+      "after sorting b  [self.a=222 self.b=1, self.a=999 self.b=3, self.a=777 self.b=5]\n"
      ]
     }
    ],
-   "execution_count": 16
+   "execution_count": 38
   },
   {
    "cell_type": "code",
