Advanced python opgaver, læsning og video

--- a/S4600_Advanced_Python.ipynb
+++ b/S4600_Advanced_Python.ipynb
@@ -794,7 +794,7 @@
     "dummy2 = Dummy(777, 5)\n",
     "dmy3 = Dummy(222, 1)\n",
     "dummies = [dummy1, dummy2, dmy3]\n",
-    "print(\"before sorting:\", dummies)\n",
+    "print(\"before sorting dummies:\", dummies)\n",
     "dummies.sort(key=lambda x: x.a, reverse=False)\n",
     "print(\"after sorting a:\", dummies)\n",
     "dummies.sort(key=lambda x: x.b, reverse=False)\n",
