Advanced python opgaver, læsning og video

--- a/S4600_Advanced_Python.ipynb
+++ b/S4600_Advanced_Python.ipynb
@@ -1297,7 +1297,12 @@
    ]
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-25T10:31:31.368837600Z",
+     "start_time": "2024-11-25T10:31:31.336446900Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# number presentation\n",
@@ -1319,11 +1324,32 @@
     "print(f\"{d=:.3f} (3 decimals)\")\n",
     "print(f\"{d=:14.2f} (14 characters reserved space, rounded to 2 decimals\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000000000 underscores do not get printed here\n",
+      "\n",
+      "b=1_234_567  f-strings can insert underscores for readability!\n",
+      "\n",
+      "37000.0 scientific notation creates floating point numbers (type float)\n",
+      "\n",
+      "d=1234.6 (1 decimal)\n",
+      "d=1234.568 (3 decimals)\n",
+      "d=       1234.57 (14 characters reserved space, rounded to 2 decimals\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-25T10:31:41.999966300Z",
+     "start_time": "2024-11-25T10:31:41.986373300Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# date presentation\n",
@@ -1334,11 +1360,26 @@
     "print(f\"{some_date:%d.%m.%y  %H:%M:%S} (example for formatted datetime)\")  \n",
     "print(f\"{some_date:%c} (local time format)\")\n"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-11-25 11:31:41.985384 (unformatted datetime)\n",
+      "25.11.24  11:31:41 (example for formatted datetime)\n",
+      "Mon Nov 25 11:31:41 2024 (local time format)\n"
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-25T10:33:17.310756400Z",
+     "start_time": "2024-11-25T10:33:17.286787300Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# alignment\n",
@@ -1349,8 +1390,19 @@
     "print(f\"xxx {some_text:^40} yyy    (center aligned)\")\n",
     "print(f\"xxx {some_text:ø^40} yyy    (center aligned, with fill character 'ø')\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xxx abcd                                     yyy    (left aligned)\n",
+      "xxx                                     abcd yyy    (right aligned)\n",
+      "xxx                   abcd                   yyy    (center aligned)\n",
+      "xxx øøøøøøøøøøøøøøøøøøabcdøøøøøøøøøøøøøøøøøø yyy    (center aligned, with fill character 'ø')\n"
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -1372,8 +1424,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-24T09:30:56.174080900Z",
-     "start_time": "2024-10-24T09:30:56.146709900Z"
+     "end_time": "2024-11-25T10:32:40.270253900Z",
+     "start_time": "2024-11-25T10:32:40.224214500Z"
     }
    },
    "source": [
@@ -1394,7 +1446,7 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 6
   },
   {
    "metadata": {},
