Advanced Python reading and exercises

--- a/S4600_Advanced_Python.ipynb
+++ b/S4600_Advanced_Python.ipynb
@@ -11,35 +11,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 0. Introduktion\n",
-    "\n",
-    "Læs introduktionen meget omhyggeligt. Det tager kun 2 minutter.\n",
-    "\n",
-    "Du har arbejdet med S1- og S2-emnerne, og nu vil du gerne lære mere om programmering og Python?   \n",
-    "Så er denne fil noget for dig. Her finder du en oversigt over yderligere materiale. Denne notebook har tre afsnit:  \n",
-    "\n",
-    "1. Hyppigt anvendte elementer og begreber i Python\n",
-    "2. Avancerede koncepter for avancerede programmører\n",
-    "3. Tips & Tricks\n",
-    "\n",
-    "Du finder i dette dokument ikke altid konkrete opgaver, som du skal løse, men typisk kun en overskrift, et lille kodeeksempel og nogle videre links.    \n",
-    "De fleste af emnerne bygger ikke på hinanden.\n",
-    "\n",
-    "Hovedformålet med dette dokument er at du har hørt om de forskellige termer og koncepter og derfor er i stand til at læse mere om emnet, når du rent faktisk har brug for dem til et af dine projekter.\n",
-    "\n",
-    "Nogle foretrækker at se videoer, andre foretrækker at læse tekster for at lære noget. Derfor er der - så vidt muligt - både links til videoer og links til tekster for hvert emne.\n",
-    "\n",
-    "Hvis der er flere links til dokumentation eller vejledninger om et emne, behøver du ikke nødvendigvis at læse alle teksterne eller se alle videoer. Vælg et eller to links, der giver mest mening for dig. \n",
-    "\n",
-    "Som altid er du velkommen til at spørge din lærer, fx hvis du er i tvivl om en emnes betydning for dig eller når du går i stå på et tidspunkt.\n",
-    "\n",
-    "Kopier denne fil til din løsnings-repository, så du kan lege med kodeeksemplerne der."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 1. Hyppigt anvendte elementer og begreber i Python"
    ]
   },
@@ -115,6 +86,35 @@
     }
    ],
    "execution_count": 5
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 0. Introduktion\n",
+    "\n",
+    "Læs introduktionen meget omhyggeligt. Det tager kun 2 minutter.\n",
+    "\n",
+    "Du har arbejdet med S1- og S2-emnerne, og nu vil du gerne lære mere om programmering og Python?   \n",
+    "Så er denne fil noget for dig. Her finder du en oversigt over yderligere materiale. Denne notebook har tre afsnit:  \n",
+    "\n",
+    "1. Hyppigt anvendte elementer og begreber i Python\n",
+    "2. Avancerede koncepter for avancerede programmører\n",
+    "3. Tips & Tricks\n",
+    "\n",
+    "Du finder i dette dokument ikke altid konkrete opgaver, som du skal løse, men typisk kun en overskrift, et lille kodeeksempel og nogle videre links.    \n",
+    "De fleste af emnerne bygger ikke på hinanden.\n",
+    "\n",
+    "Hovedformålet med dette dokument er at du har hørt om de forskellige termer og koncepter og derfor er i stand til at læse mere om emnet, når du rent faktisk har brug for dem til et af dine projekter.\n",
+    "\n",
+    "Nogle foretrækker at se videoer, andre foretrækker at læse tekster for at lære noget. Derfor er der - så vidt muligt - både links til videoer og links til tekster for hvert emne.\n",
+    "\n",
+    "Hvis der er flere links til dokumentation eller vejledninger om et emne, behøver du ikke nødvendigvis at læse alle teksterne eller se alle videoer. Vælg et eller to links, der giver mest mening for dig. \n",
+    "\n",
+    "Som altid er du velkommen til at spørge din lærer, fx hvis du er i tvivl om en emnes betydning for dig eller når du går i stå på et tidspunkt.\n",
+    "\n",
+    "Kopier denne fil til din løsnings-repository, så du kan lege med kodeeksemplerne der."
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1209,7 +1209,10 @@
   {
    "cell_type": "code",
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-12-03T09:46:05.803535400Z",
+     "start_time": "2024-12-03T09:46:04.938793800Z"
+    }
    },
    "source": [
     "# Eksempel:\n",
@@ -1229,8 +1232,16 @@
     "\n",
     "json_stub()"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 1, 'name': 'Leanne Graham', 'username': 'Bret', 'email': 'Sincere@april.biz', 'address': {'street': 'Kulas Light', 'suite': 'Apt. 556', 'city': 'Gwenborough', 'zipcode': '92998-3874', 'geo': {'lat': '-37.3159', 'lng': '81.1496'}}, 'phone': '1-770-736-8031 x56442', 'website': 'hildegard.org', 'company': {'name': 'Romaguera-Crona', 'catchPhrase': 'Multi-layered client-server neural-net', 'bs': 'harness real-time e-markets'}}\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -1424,8 +1435,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T10:32:40.270253900Z",
-     "start_time": "2024-11-25T10:32:40.224214500Z"
+     "end_time": "2024-12-03T09:49:28.113246700Z",
+     "start_time": "2024-12-03T09:49:28.079690800Z"
     }
    },
    "source": [
@@ -1446,7 +1457,7 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 2
   },
   {
    "metadata": {},
